--- a/tasks/install-node_exporter.yml
+++ b/tasks/install-node_exporter.yml
@@ -1,14 +1,22 @@
 ---
-- name: Create node_exporter container
-  docker_container:
-    name: node_exporter
-    hostname: "{{ node_exporter_hostname }}"
-    image: "{{ node_exporter_image }}"
-    command: "{% for key in node_exporter_commandline_args %}--{{ key }}={{ node_exporter_commandline_args[key] }} {% endfor %}"
-    volumes:
-      - "/:/host:ro,rslave"
-    published_ports:
-      - 9100:9100
-    restart_policy: always
-    pid_mode: host
-    network_mode: host
+- name: Install on system
+  fail: msg="blackbox_exporter 'system' install_mode not yet supported"
+  when: install_mode == 'system'
+
+- name: Install with docker
+  block:
+    - name: Create node_exporter container
+      docker_container:
+        name: node_exporter
+        hostname: "{{ node_exporter_hostname }}"
+        image: "{{ node_exporter_image }}"
+        command: "{% for key in node_exporter_commandline_args %}--{{ key }}={{ node_exporter_commandline_args[key] }} {% endfor %}"
+        volumes:
+          - "/:/host:ro,rslave"
+        published_ports:
+          - 9100:9100
+        restart_policy: always
+        pid_mode: host
+        network_mode: host
+
+  when: install_mode == 'docker'
