--- a/requirements.yml
+++ b/requirements.yml
@@ -1,1 +1,4 @@
-#- src: dochang.docker
+# - src: https://github.com/geerlingguy/ansible-role-docker
+#   version: master
+#   name: geerlingguy.docker
+#   scm: git
