--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -129,6 +129,7 @@ prometheus_telegraf_rules_config_default:
   OpsgenieHeartbeat:
     name: OpsgenieHeartbeat
     receiver: opsgenie_heartbeat
+    severity: none
 
   EventstoreIsAlive:
     name: EventstoreIsAlive
